tests/bad/frontend/undeclaredVariable.latte
int main() {
    x = 22;
}